Enable Java 23 preview features